--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "redis": "^5.9.0"
   }
 }
