--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -28,4 +28,4 @@ RUN npm run build
 EXPOSE 3000
 
 # The command to start your (now built) JavaScript server
-CMD [ "node", "dist/server.js" ]
+CMD ["sh", "-c", "npx prisma migrate deploy && node dist/server.js"]
